--- a/functions/traveller/client/layouts/layout.html
+++ b/functions/traveller/client/layouts/layout.html
@@ -40,7 +40,7 @@
                 <div class="col-lg-6 text-center text-lg-left mb-2 mb-lg-0">
                     <div class="d-inline-flex align-items-center">
                         <p><i class="fa fa-envelope mr-2"></i>info@example.com</p>
-                        <p class="text-body px-3">|</p>
+                        <p class="text-body px-3"></p>
                         <p><i class="fa fa-phone-alt mr-2"></i>+012 345 6789</p>
                     </div>
                 </div>
@@ -85,6 +85,7 @@
                         <a href="/server/traveller/service" class="nav-item nav-link">Services</a>
                         <a href="/server/traveller/packages" class="nav-item nav-link">Tour Packages</a>
                         <a href="/server/traveller/contact" class="nav-item nav-link">Contact</a>
+                        <a href="/server/traveller/cart" style="display:none;" class="nav-item nav-link" id="cart"><i class="fas fa-shopping-cart text-primary mr-2"></i> Cart</a>
                         <a href="javascript:catalyst.auth.signOut(document.URL)" style="display:none;" class="nav-item nav-link" id="logout">Logout</a>
                     </div>
                 </div>
