--- a/functions/traveller/client/layouts/layout.html
+++ b/functions/traveller/client/layouts/layout.html
@@ -85,6 +85,8 @@
                         <a href="/server/traveller/service" class="nav-item nav-link">Services</a>
                         <a href="/server/traveller/packages" class="nav-item nav-link">Tour Packages</a>
                         <a href="/server/traveller/contact" class="nav-item nav-link">Contact</a>
+                        <a href="/server/traveller/cart" style="display:none;" class="nav-item nav-link" id="signup">Sign up</a>
+                        <a href="/server/traveller/cart" style="display:none;" class="nav-item nav-link" id="login">Login</a>
                         <a href="/server/traveller/cart" style="display:none;" class="nav-item nav-link" id="cart"><i class="fas fa-shopping-cart text-primary mr-2"></i> Cart</a>
                         <a href="javascript:catalyst.auth.signOut(document.URL)" style="display:none;" class="nav-item nav-link" id="logout">Logout</a>
                     </div>
