--- a/functions/traveller/client/layouts/layout.html
+++ b/functions/traveller/client/layouts/layout.html
@@ -88,7 +88,7 @@
                         <a href="/server/traveller/sign-up" style="display:none;" class="nav-item nav-link" id="signup">Sign up</a>
                         <a href="/server/traveller/login" style="display:none;" class="nav-item nav-link" id="login_">Login</a>
                         <a href="/server/traveller/cart" style="display:none;" class="nav-item nav-link" id="cart"><i class="fas fa-shopping-cart text-primary mr-2"></i> Cart</a>
-                        <a href="javascript:catalyst.auth.signOut(document.URL)" style="display:none;" class="nav-item nav-link" id="logout">Logout</a>
+                        <a href="#" style="display:none;" class="nav-item nav-link" id="logout" logout>Logout</a>
                     </div>
                 </div>
             </nav>
