--- a/functions/traveller/client/layouts/layout.html
+++ b/functions/traveller/client/layouts/layout.html
@@ -19,17 +19,17 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
 
     <!-- Libraries Stylesheet -->
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
+    <link href="/server/traveller/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="/server/traveller/lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
 
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="/server/traveller/css/style.css" rel="stylesheet">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://static.zohocdn.com/catalyst/sdk/js/3.0.0/catalystWebSDK.js"></script>
     <!-- <script src="js/catalyst.js"></script> -->
     <script src="/__catalyst/sdk/init.js"></script>
-    <script src="js/layout.js"></script>
+    <script src="/server/traveller/js/layout.js"></script>
 </head>
 
 <body>
@@ -175,18 +175,14 @@
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="lib/tempusdominus/js/moment.min.js"></script>
-    <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
-    <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
-
-    <!-- Contact Javascript File -->
-    <script src="mail/jqBootstrapValidation.min.js"></script>
-    <script src="mail/contact.js"></script>
+    <script src="/server/traveller/lib/easing/easing.min.js"></script>
+    <script src="/server/traveller/lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="/server/traveller/lib/tempusdominus/js/moment.min.js"></script>
+    <script src="/server/traveller/lib/tempusdominus/js/moment-timezone.min.js"></script>
+    <script src="/server/traveller/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
 
     <!-- Template Javascript -->
-    <script src="js/main.js"></script>
+    <script src="/server/traveller/js/main.js"></script>
 </body>
 
 </html>
